syntax = "proto3";

package blog;
option go_package = "blog/blogpb";

message Blog {
    string id = 1;
    string author = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogReq {
    Blog blog = 1;
}

message CreateBlogRes {
    Blog blog = 1;
}

message ReadBlogReq {
    string blogID = 1;
}

message ReadBlogRes {
    Blog blog = 1;
}

message UpdateBlogReq {
    Blog blog = 1;
}

message UpdateBlogRes {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog (CreateBlogReq) returns (CreateBlogRes);
    rpc ReadBlog (ReadBlogReq) returns (ReadBlogRes);
    rpc UpdateBlog (UpdateBlogReq) returns (UpdateBlogRes);
}